fixed table horizontal overflow

--- a/src/views/activity/ModuleTable.scss
+++ b/src/views/activity/ModuleTable.scss
@@ -11,3 +11,7 @@
     margin: rem(21) rem(24);
   }
 }
+
+.table {
+  overflow-x: auto;
+}
